<resources>
    <string name="app_name">GoogleDviverExample</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_out">Signed out</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="errormessage_check_network">please check the state of network.</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="hint_title">title</string>
    <string name="hint_input_something">input something</string>
    <string name="errormessage_input_title">please input the title.</string>
    <string name="title_activity_google_album">GoogleAlbumActivity</string>
</resources>
